ghc/tests/reader/should_fail/read009.stderr
read009.hs:12: parse error (possibly incorrect indentation)
